[tool.poetry]
package-mode = false
name = "Pitwall"
version = "0.9.0"
description = "A free and open source motorsport manager game"
authors = ["Domhnall Morrissey"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "2.2.2"
pillow = "10.3.0"
matplotlib = "3.9.0"
flet = "^0.24.1"
plotly = "^5.24.1"
kaleido = "0.2.1"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"